t+si:[[ලස්සන]] t-balance ([[WT:EDIT|Assisted]]) <beautiful#14011875>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -118,6 +118,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * [[Scottish Gaelic]]: [[àlainn]], [[bòidheach]], [[brèagha]], [[fèilleil]], [[grinn]], [[maiseach]], [[rìomhach]], [[sgèimheach]]
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|леп}}
+* [[Sinhalese]]: {{t|si|ලස්සන|tr=lassanna|sc=Sinh}}
 * Slovak: {{t-|sk|krásny}}, {{t|sk|pekný}}
 * Slovene: {{t+|sl|lep}}
 * Spanish: {{t-|es|hermoso}}, {{t+|es|bello}}, {{t+|es|lindo}}, {{t-|es|guapo}}, {{t+|es|bonito}}
