--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -2,10 +2,10 @@
 ==English==
 
 ===Alternative forms===
-* [[pyjamas]] (''Australia'',''UK'',Canada)
+* [[pyjamas]] {{qualifier|Australia|UK|Canada}}
 
 ===Etymology===
-From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning ''leg garment'' via {{etyl|ur}}/{{etyl|hi}} {{term|पैजामा|sc=Deva}}.
+From the {{etyl|fa}} {{term|پايجامه||leg garment|lang=fa}} via {{etyl|ur}}/{{etyl|hi}} {{term|पैजामा|sc=Deva}}.
 
 ===Pronunciation===
 * {{IPA|/pəˈdʒɑ.məz/|/pəˈdʒæ.məz/}}
@@ -13,7 +13,7 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 
 ===Noun===
 {{wikipedia}}
-{{en-noun|-}} {{pluralonly}}
+{{en-plural noun}}
 
 # [[clothes|Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants/trousers.
 # Loose-fitting [[trousers]] worn by both sexes in various southern Asian countries including [[India]].
