--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -49,7 +49,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijōn|
 * [[Chamicuro]]: {{tø|ccc|ita'la}}
 * Chinese:
 *: Mandarin: {{t-|cmn|裙子|tr=qúnzi|sc=Hani}}, {{t-|cmn|裙|tr=qún|sc=Hani}}
-* Catalan: {{t|ct|faldilla|f}}
+* Catalan: faldilla
 * Croatian: {{t+|hr|suknja|f|alt=sȕknja}}
 * Czech: {{t+|cs|sukně|f}}
 * Danish: {{t-|da|nederdel|c}}, {{t-|da|skørt|n}}
