t+arz:[[فرنسا]] ([[WT:EDIT|Assisted]]) <France#14023679>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -33,6 +33,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 *: [[Gheg]]: [[Frankreich]]
 * [[American Sign Language]]: [[F@NearForehead-HandPalmDown F@NearForehead-HandPalmUp HorizSmallTwist]]
 * Arabic: {{t+|ar|فرنسا|f|tr=faránsa}}
+*: [[Egyptian Arabic]]: {{tø|arz|فرنسا|f|tr= faransa|sc=Arab}}
 * [[Aragonese]]: [[Franzia]] {{f}}
 * Armenian: {{t+|hy|Ֆրանսիա|tr=Fransia}}
 * [[Asturian]]: [[Francia]] {{f}}
