--- a/en/態/態.15710.wikitext
+++ b/en/態/態.15710.wikitext
@@ -29,18 +29,20 @@
 
 ==Japanese==
 
+===Kanji===
+{{ja-kanji|grade=5|rs=心10}}
+
+====Readings====
+* {{ja-readings|on=[[たい]] (tai)|kun=[[さま]] (sama), [[わざと]] (wazato)}}
+
 ===Noun===
 {{ja-noun|k|hira=たい|rom=tai}}
 
 # {{grammar|lang=ja|skey=たい}} [[voice]] -  a particular mode of inflecting or conjugating verbs, or a particular form of a verb, by means of which is indicated the relation of the subject of the verb to the action which the verb expresses.
 
-===Kanji===
-{{ja-kanji|grade=5|rs=心10}}
-
-# {{defn|lang=ja|sort=心10}}
-
-====Readings====
-* {{ja-readings|on=[[たい]] (tai)|kun=[[さま]] (sama), [[わざと]] (wazato)}}
+===Suffix===
+{{ja-pos|k|suffix|hira=たい|rom=-tai}}
+# {{grammar|lang=ja|skey=たい}} [[voice]], [[diathesis]]
 
 ----
 
