--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -32,7 +32,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Albanian: {{t+|sq|Franca|xs=Albanian}}
 *: [[Gheg]]: [[Frankreich]]
 * [[American Sign Language]]: [[F@NearForehead-HandPalmDown F@NearForehead-HandPalmUp HorizSmallTwist]]
-* Arabic: {{t+|ar|فرنسا|f|tr=faránsa}}, {{qualifier|archaic}} {{t|ar|بلاد الإفرنج|f|p|tr=blad alifranj|sc=Arab}}, {{qualifier|archaic}} {{t|ar|بلاد الفرنجة|f|p|tr=bilad alfirinja|sc=Arab}}
+* Arabic: {{t+|ar|فرنسا|f|tr=faránsa}}, {{qualifier|archaic}} {{t|ar|بلاد الإفرنج|f|p|tr=blad alʔifranj|sc=Arab}}, {{qualifier|archaic}} {{t|ar|بلاد الفرنجة|f|p|tr=bilad alfirinja|sc=Arab}}
 *: [[Egyptian Arabic]]: {{tø|arz|فرنسا|f|tr= faransa|sc=Arab}}
 * [[Aragonese]]: [[Franzia]] {{f}}
 * Armenian: {{t+|hy|Ֆրանսիա|tr=Fransia}}
