t+crh:[[Almaniya]] ([[WT:EDIT|Assisted]]) <Germany#14027481>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -45,6 +45,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Chinese:
 *: Mandarin: {{t-|cmn|德國|sc=Hani}}, {{t-|cmn|德国|tr=Déguó|sc=Hani}}, {{t-|cmn|德意志|tr=Déyìzhì|sc=Hani}}
 * [[Cornish]]: [[Almayn]]
+* [[Crimean Tatar]]: {{tø|crh|Almaniya}}
 * Croatian: {{t+|hr|Njemačka|f|alt=Njèmačkā}}
 * Czech: {{t+|cs|Německo|n}}
 * Danish: {{t+|da|Tyskland|n}}
