t+crh:[[Frenkistan]] t-balance ([[WT:EDIT|Assisted]]) <France#14027522>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -53,6 +53,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 *: Teochew: Huag8gog4
 * [[Cornish]]: [[Pow Frynk]]
 * [[Corsican]]: [[Francia]] {{f}}
+* [[Crimean Tatar]]: {{tø|crh|Frenkistan}}
 * Croatian: {{t+|hr|Francuska|f}}
 * Czech: {{t+|cs|Francie}}
 * Danish: {{t+|da|Frankrig}}
@@ -88,8 +89,8 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Kikuyu]]: {{tø|ki|Frans}}
 * Korean: {{t+|ko|프랑스|tr=Peurangseu|sc=Hang}}
 * Kurdish: {{t|ku|فه‌ره‌نسا|sc=ku-Arab}}
-* [[Lao]]: {{t|lo|ປະເທດຝະລັ່ງ|sc=Laoo|xs=Lao}}
 {{trans-mid}}
+* [[Lao]]: {{t|lo|ປະເທດຝະລັ່ງ|sc=Laoo|xs=Lao}}
 * Latin: {{t+|la|Gallia|f}}, {{t+|la|Francia}}
 * Latvian: {{t+|lv|Francija|f|xs=Latvian}}
 * [[Limburgish]]: [[Frankriek]]
