--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -45,6 +45,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 * [[Catalan]]: {{t|ca|tro|m}}
 * [[Chamicuro]]: {{tø|ccc|tswali}}
 * Chinese: [[雷]] (léi)
+*: Mandarin: {{t|zh|雷|tr=léi|sc=Hani}}, {{t|zh|雷聲|sc=Hani}}, {{t|zh|雷声|tr=léishēng|sc=Hani}}
 * Croatian: {{t|hr|grmljavina|f}}, {{t|hr|grom|m}}
 * Czech: [[hrom]] {{m}}, [[zahřmění]] {{n}}
 * Danish: {{t+|da|torden}}
@@ -62,13 +63,13 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 * Icelandic: {{t+|is|þruma}}
 * Irish: {{t|ga|toirneach}}
 * Italian: {{t-|it|tuono|m}}
-* Japanese: {{t+|ja|雷|tr=kaminari}}
-* Korean: [[우레]] (ure)
+* Japanese: {{t+|ja|雷|tr=kaminari}}, {{t|ja|雷|tr=かみなり, kaminari|sc=Jpan}}
+* Korean: [[우레]] (ure), {{t|ko|우레|tr=ure|sc=Kore}}
 * [[Kott]]: {{tø|zko|ajak}}
 * [[Latgalian]]: {{tø|ltg|pārkiuņs}}
 * Latin: {{t-|la|tonus|m}}, {{t|la|tonitrus|m}}, {{t|la|tonitruum|n}}
-* Latvian: {{t|lv|pērkons|m}}
 {{trans-mid}}
+* Latvian: {{t|lv|pērkons|m}}
 * Lithuanian: {{t|lt|griaustinis|xs=Lithuanian}}
 * [[Macedonian]]: {{t+|mk|гром|m|tr=grom}}
 * [[Manx]]: {{t-|gv|taarnagh|xs=Manx}}
@@ -99,13 +100,15 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 
 {{trans-top|sound resembling thunder}}
 * Armenian: {{t-|hy|որոտ|tr=orot}}
+* Chinese:
+*: Mandarin: {{t|zh|轟鳴|sc=Hani}}, {{t|zh|轰鸣|tr=hōngmíng|sc=Hani}}
 * Czech: [[zahřmění]] {{n}}, [[hromová rána]] {{f}}, [[hřmění]] {{n}}
 * Finnish: {{t-|fi|jyrinä}}, {{t|fi|jyrähtely}}
 * German: {{t-|de|Donnern|n}}
 * Greek: {{t+|el|κεραυνός|m|tr=keravnós}}
 * Hungarian: {{t+|hu|dörgés}}
-* Japanese: {{t+|ja|雷鳴|tr=raimei}}
 {{trans-mid}}
+* Japanese: {{t+|ja|雷鳴|tr=raimei}}, {{t|ja|雷鳴|tr=らいめい, raimei|sc=Jpan}}
 * Polish: {{t+|pl|grzmot|m}}
 * Russian: {{t+|ru|гром|m|tr=grom}}, {{t+|ru|грохот|m|tr=gróxot}}
 * [[Scottish Gaelic]]: {{t-|gd|tàirneanach|m|xs=Scottish Gaelic}}
@@ -178,6 +181,8 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 {{trans-top|to make a noise like thunder}}
 * [[Breton]]: [[ober]] [[kurun]], [[taranal]] / [[taraniñ]]
 * [[Catalan]]: {{t|ca|tronar}}
+* Chinese:
+*: Mandarin: {{t|zh|打雷|tr=dǎléi|sc=Hani}}
 * Czech: [[hřmít]]
 * Dutch: {{t+|nl|donderen}}
 * Esperanto: {{t|eo|tondri}}
@@ -186,15 +191,15 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 * German: {{t+|de|donnern}}
 * Hebrew: {{t|he|רעם|tr=ra'am|sc=Hebr}}
 * Italian: {{t-|it|tuonare}}
-* Japanese: {{qualifier|it thunders}} {{t|ja|雷が鳴る|tr=[[かみなり]]が[[なる]], kaminari ga naru}}, {{qualifier|to make a noise like thunder}} {{t|ja|轟音を立てる|tr=gō'on wo tateru}}
 {{trans-mid}}
+* Japanese: {{qualifier|it thunders}} {{t|ja|雷が鳴る|tr=[[かみなり]]が[[なる]], kaminari ga naru}}, {{qualifier|to make a noise like thunder}} {{t|ja|轟音を立てる|tr=gō'on wo tateru}}
 * Latin: {{t-|la|tono}}
 * [[Luxembourgish]]: {{t|lb|donneren}}
 * [[Luxembourgish]]: {{t|lb|donneren}}
 * Polish: {{t|pl|grzmieć}}, {{t|pl|zagrzmieć}}
 * Portuguese: {{t|pt|trovoar}}, {{t|pt|trovejar}}
 * Romanian: {{t+|ro|tuna}}
-* Russian: {{t|ru|греметь|tr=gr'em'ét’}}, {{t|ru|грохотать|tr=groχotát’}}
+* Russian: {{t|ru|греметь|tr=gr'em'ét’}}, {{t|ru|грохотать|tr=groχotát’}}, {{t|ru|громыхать|tr=gromyxát'|sc=Cyrl}}
 * Slovene: {{t-|sl|grmeti}}
 * Spanish: {{t|es|tronar}}
 * Swedish: {{t|sv|dundra}}, {{t|sv|dåna}}
