--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -191,8 +191,8 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 * German: {{t+|de|donnern}}
 * Hebrew: {{t|he|רעם|tr=ra'am|sc=Hebr}}
 * Italian: {{t-|it|tuonare}}
+* Japanese: {{qualifier|it thunders}} {{t|ja|雷が鳴る|tr=[[かみなり]]が[[なる]], kaminari ga naru}}, {{qualifier|to make a noise like thunder}} {{t|ja|轟音を立てる|tr=gōon o tateru}}
 {{trans-mid}}
-* Japanese: {{qualifier|it thunders}} {{t|ja|雷が鳴る|tr=[[かみなり]]が[[なる]], kaminari ga naru}}, {{qualifier|to make a noise like thunder}} {{t|ja|轟音を立てる|tr=gō'on wo tateru}}
 * Latin: {{t-|la|tono}}
 * [[Luxembourgish]]: {{t|lb|donneren}}
 * [[Luxembourgish]]: {{t|lb|donneren}}
@@ -214,7 +214,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 * Finnish: {{t-|fi|jyristä}}, {{t|fi|pauhata}}
 {{trans-mid}}
 * French: {{t+|fr|tonitruer}}
-* Japanese: {{t|ja|怒鳴る|tr=donaru}}
+* Japanese: {{t|ja|怒鳴る|tr=どなる, donaru}}
 * Polish: {{t|pl|gromić}}
 * Portuguese: {{t|pt|trovejar}}
 {{trans-bottom}}
@@ -222,7 +222,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}} < *þen, from
 {{trans-top|transitive: say something with a loud, threatening voice}}
 * Finnish: {{t|fi|jyristä}}
 {{trans-mid}}
-* Japanese: {{t|ja|怒鳴る|tr=donaru}}
+* Japanese: {{t|ja|怒鳴る|tr=どなる, donaru}}
 {{trans-bottom}}
 
 {{checktrans-top}}
