--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -31,20 +31,9 @@ In current form, {{Han compound|〡|t1=one|日|t2=day}}, representing the day be
 ----
 
 ==Japanese==
-{{ja-see-also|旧-}}
-
-===Noun===
-{{ja-noun|k|hira=きゅう|rom=kyū}}
-
-# [[old]] things, original state, former state, old times
-# the old calendar based on a lunar system
-{{ja-noun|k|hira=ふる|rom=furu}}
-# [[used]] item, [[secondhand]] item
 
 ===Kanji===
 {{ja-kanji|grade=5|rs=日01}}
-
-# {{defn|lang=ja|sort=日01}}
 
 ====Readings====
 * {{ja-readings|on=[[きゅう]] (''kyū'')|kun=[[ふるい]] ([[旧い]], ''furui''), [[もと]] (''moto'')}}
@@ -72,6 +61,20 @@ In current form, {{Han compound|〡|t1=one|日|t2=day}}, representing the day be
 * [[旧に復する]] (''kyū ni fukusuru''): be restored to a former state
 {{bottom}}
 
+===Noun===
+{{ja-noun|k|hira=きゅう|rom=kyū}}
+
+# [[old]] things, original state, former state, old times
+# the old calendar based on a lunar system
+{{ja-noun|k|hira=ふる|rom=furu}}
+# [[used]] item, [[secondhand]] item
+
+===Prefix===
+{{ja-pos|k|prefix|hira=きゅう|rom=kyū-}}
+# [[old]], [[previous]], [[-ex]], [[former]]
+
+{{ja-pos|k|prefix|hira=ふる|rom=furu-}}
+# [[old]], [[used]], [[previous]]
 ----
 
 ==Korean==
