--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -79,6 +79,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Arabic: {{t|ar|تحدث|tr=taHáddatha}},  {{t|ar|تكلم|tr=takállama}}
 * Armenian: {{t+|hy|խոսել|tr=khosel}}
 * [[Asturian]]: {{t|ast|falar}}
+* [[Azeri]]: {{t|az|danışmaq}}
 * Belarusian: {{t|be|гаварыць|tr=havarýc’|xs=Belarusian}},  {{t|be|размаўляць|tr=razmaŭljác’|xs=Belarusian}}
 * Bengali: {{t-|bn|বলা|tr=bôla|sc=Beng|xs=Bengali}}
 * [[Breton]]: [[komz]]
@@ -93,6 +94,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Estonian: {{t-|et|rääkima}}
 * Finnish: {{t+|fi|puhua}} (1, 2, 3, 4, 5, 6), {{t+|fi|kertoa}} (3), {{t-|fi|pitää puhe}} (5)
 * French: {{t+|fr|parler}}
+* Georgian: {{t|ka|ლაპარაკი|tr=laparaki|sc=Geor}}
 * German: {{t+|de|sprechen}},  {{t+|de|reden}}
 * Greek: {{t+|el|μιλώ|tr=miló}}, {{t+|el|λέω|tr=léo}}
 * [[Guaraní]]: [[ñe'ẽ]]
@@ -108,8 +110,8 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Korean: {{t+|ko|말하다|tr=malhada|sc=Hang}}
 * Lao: {{t|lo|ເວົ້າ|tr=waw|sc=Laoo}}
 * Latin: {{t+|la|dico|alt=dīcō}},  {{t-|la|fabulor|alt=fābulor}}, {{t+|la|loquor}}, {{t|la|for}}, {{t|la|effor}}
-* Lithuanian: {{t+|lt|kalbėti|xs=Lithuanian}}
 {{trans-mid}}
+* Lithuanian: {{t+|lt|kalbėti|xs=Lithuanian}}
 * [[Luxembourgish]]: {{t|lb|schwätzen}}
 * [[Macedonian]]: {{t|mk|зборува|tr=zboruva}}
 * Maltese: {{t|mt|tkellem}}
