--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -86,7 +86,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Bulgarian: {{t+|bg|говоря|tr=govorja}} (1, 6)
 * [[Catalan]]: [[parlar]]
 * Chinese:
-*: Mandarin: {{t-|cmn|説|sc=Hani}},  {{t-|cmn|说|tr=shuō|sc=Hani}},  {{t|cmn|説話|sc=Hani}},  {{t-|cmn|说话|tr=shuōhuà|sc=Hani}},  {{t-|cmn|講|sc=Hani}},  {{t-|cmn|讲|tr=jiǎng|sc=Hani}}
+*: Mandarin: {{t-|cmn|說|sc=Hani}},  {{t-|cmn|说|tr=shuō|sc=Hani}},  {{t|cmn|說話|sc=Hani}},  {{t-|cmn|说话|tr=shuōhuà|sc=Hani}},  {{t-|cmn|講|sc=Hani}},  {{t-|cmn|讲|tr=jiǎng|sc=Hani}}
 * Czech: {{t+|cs|mluvit}},  {{t-|cs|hovořit}}
 * Danish: {{t|da|tale}} (1, 2, 3, 4, 5, 6, 7)
 * Dutch: {{t+|nl|spreken}}
