--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -23,6 +23,9 @@
 # {{intransitive|slang}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency. {{defdate|from 20th c.}}
 #* '''1970''', [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America'', Simon and Schuster, pg. 251:
 #*: . . . and it has a few very high points . . . but as a novel, it '''sucks'''.
+# {{rfdef|lang=en}}
+#* '''2011''', Tom Fordyce, ''Rugby World Cup 2011: England 12-19 France'' [http://news.bbc.co.uk/sport1/hi/rugby_union/15210221.stm]
+#*: France were supposedly a team in pieces, beaten by Tonga just a week ago and with coach Marc Lievremont publicly berating his players, but so clear-cut was their victory that much of the atmosphere had been '''sucked''' from the contest long before the end.
 
 ====Synonyms====
 * To [[draw]]
