--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -191,7 +191,7 @@
 {{trans-bottom}}
 
 ===Etymology 2===
-{{enm}} {{term|pleyen|lang=enm}}, from {{etyl|ang}} {{term|plegian|pleġian|lang=ang}}, frequentative of {{term|pleon|pleōn|to risk, endanger|lang=ang}}, from {{proto|Germanic|plehanan}} (compare West Frisian {{term|pleegje|lang=fy}}, Dutch {{term|plegen||to cimmit, practice|lang=nl}}, German {{term|pflegen||to tend, attend to|lang=de}}, perhaps from {{proto|Indo-European|bal-}} (compare Ancient Greek ''blyein, blýzein'' 'to gush out, spring', Sanskrit ''balbaliti'' 'it whirls, twirls').
+{{enm}} {{term|pleyen|lang=enm}}, from {{etyl|ang}} {{term|plegian|pleġian|lang=ang}}, frequentative of {{term|pleon|pleōn|to risk, endanger|lang=ang}}, from {{proto|Germanic|plehanan}} (compare West Frisian {{term|pleegje|lang=fy}}, Dutch {{term|plegen||to commit, practice|lang=nl}}, German {{term|pflegen||to tend, attend to|lang=de}}, perhaps from {{proto|Indo-European|bal-}} (compare Ancient Greek ''blyein, blýzein'' 'to gush out, spring', Sanskrit ''balbaliti'' 'it whirls, twirls').
 
 ====Verb====
 {{en-verb}}
