--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -232,7 +232,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 [[Category:English irregular verbs]]
 [[Category:English past participles]]
 [[Category:English prepositions]]
-[[Category:English verbs which are their own past participle]]
+[[Category:English verbs with base form identical to past participle]]
 [[Category:en:Behaviour]]
 
 ----
