--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -197,7 +197,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 [[Category:English irregular verbs]]
 [[Category:English past participles]]
 [[Category:English simple past forms]]
-[[Category:English verbs which are their own past participle]]
+[[Category:English verbs with base form identical to past participle]]
 
 ----
 
