--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -585,7 +585,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 [[Category:English irregular verbs]]
 [[Category:English past participles]]
 [[Category:English simple past forms]]
-[[Category:English verbs which are their own past participle]]
+[[Category:English verbs with base form identical to past participle]]
 [[Category:en:Meats]]
 
 ----
