/* Noun */ +zh <brick#14109320>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -146,6 +146,27 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * {{ttbc|zh}}: [[好心腸]]的, [[好心肠]]的 (hǎo xīn cháng de)
 {{trans-bottom}}
 
+{{trans-top|electronic device}}
+* {{trreq|ar}}
+* {{trreq|hy}}
+* Chinese:
+*: Mandarin: {{t|zh|砖头|tr=zhuāntóu |sc=Hani}}
+* {{trreq|cs}}
+* {{trreq|nl}}
+* {{trreq|fr}}
+* {{trreq|de}}
+{{trans-mid}}
+* {{trreq|hi}}
+* {{trreq|it}}
+* {{trreq|ja}}
+* {{trreq|ko}}
+* {{trreq|pt}}
+* {{trreq|ru}}
+* {{trreq|es}}
+* {{trreq|vi}}
+{{trans-bottom}}
+
+
 {{checktrans-top|}}
 * {{ttbc|ar}}: [[طوبة]] (ṭūbah)
 * {{ttbc|br}}: [[brikenn]] {{f}} -où
