--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -99,7 +99,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Portuguese: {{t+|pt|tijolo}}
 * [[Quechua]]: {{t-|qu|kusasqa tika|xs=Quechua}}
 * Romanian: {{t+|ro|cărămidă}}
-* Russian: {{t+|ru|кирпич|m|tr=kirpíč}}
+* Russian: {{t+|ru|кирпич|m|tr=kirpíč|alt=кирпи́ч}}
 * [[Scottish Gaelic]]: [[breig]]
 * Serbian: {{t-|sr|опека|sc=Cyrl}}
 * Serbo-Croatian: {{t|sh|cigla|xs=Serbo-Croatian}}, {{t|sh|цигла|f}}
@@ -133,6 +133,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Irish: {{t|ga|bríce|m}}
 * Latvian: [[ķieģelis]] {{m}}
 * Romanian: {{t+|ro|cărămidă}}
+* Russian: {{t+|ru|кирпич|m|tr=kirpíč|alt=кирпи́ч}}
 * Slovene: {{t+|sl|opeka}}
 * Spanish: {{t+|es|ladrillo|m}}
 * Swedish: {{t+|sv|tegel|n}}
@@ -143,6 +144,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 * Dutch: [[kanjer]], [[toeverlaat]] {{m}}, [[beschermengel]] {{m}}
 {{trans-mid}}
 * Icelandic: {{t|is|ágætis manneskja|f}}, {{t|is|perla af manni|f}}, {{t|is|fyrirtaks manneskja|f}}
+* Russian: {{t|ru|молоток|m|tr=kirpíč|alt=молото́к}}
 * {{ttbc|zh}}: [[好心腸]]的, [[好心肠]]的 (hǎo xīn cháng de)
 {{trans-bottom}}
 
