--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -198,6 +198,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 ====Translations====
 {{trans-top|act of pulling}}
 * Czech: {{t-|cs|tah|m}}
+* {{fi}}: {{t+|fi|vetäminen}}
 * Kurdish: {{ku-Arab|[[ڕاکێشان]]}}
 {{trans-mid}}
 * Swedish: {{t+|sv|ryck|n}}
