--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -202,7 +202,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Kurdish: {{ku-Arab|[[ڕاکێشان]]}}
 {{trans-mid}}
 * Swedish: {{t+|sv|ryck|n}}
-* {{t}}: {{t+|fi|çekme}}
+* {{tr}}: {{t+|fi|çekme}}
 {{trans-bottom}}
 
 {{trans-top|attractive force}}
