--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -180,10 +180,11 @@
 * Dutch: {{t+|nl|duw|m}}
 * German: [[Schubs]] {{m}}, [[Stoß]] {{m}}
 * Kurdish: {{ku-Arab|[[پاڵ]]}}
-{{trans-mid}}
 * Portuguese: {{t|pt|empurrão|m}}
+{{trans-mid}}
 * Russian: {{t|ru|толчок|m|sc=Cyrl|tr=tolčók}}
 * Spanish: {{t-|es|empujón|m}}
+* Swedish: {{t+|sv|ryck}}
 * [[Telugu]]: {{t|te|వెనుకకు నెట్టి ముందుకు పోవు|tr=venukaku netti munduku povu|sc=Telu}}
 {{trans-bottom}}
 
