t+dsb:[[rědny]] ([[WT:EDIT|Assisted]]) <beautiful#14121252>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -121,6 +121,8 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * [[Sinhalese]]: {{t|si|ලස්සන|tr=lassanna|sc=Sinh}}
 * Slovak: {{t-|sk|krásny}}, {{t|sk|pekný}}
 * Slovene: {{t+|sl|lep}}
+* Sorbian:
+*: [[Lower Sorbian]]: {{tø|dsb|rědny}}
 * Spanish: {{t-|es|hermoso}}, {{t+|es|bello}}, {{t+|es|lindo}}, {{t-|es|guapo}}, {{t+|es|bonito}}
 * Swahili: {{t|sw|zuri}}
 * Swedish: {{t+|sv|fin}}, {{t+|sv|vacker}}
