t+lo:[[ນູແວນ​ເຊລັງ]] t+my:[[နယူးဇီလန္]] t-balance t+ja:[[ニュー・ジーランド]] t+si:[[නවසීලන්‍තය]] t+bn:[[নিউজিল্যান্ড]] t+ka:[[ახალი ზელ... <New Zealand#14125593>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -18,13 +18,17 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 
 ====Translations====
 {{trans-top|country in Oceania}}
+* [[Afrikaans]]: {{t|af|Nieu-Seeland}}
+* Albanian: {{t|sq|Zelanda e Re}}
 * Arabic: {{t|ar|نيوزيلاندا|f|tr=nyuzilánda}}
 * Armenian: {{t-|hy|Նոր Զելանդիա|tr=Nor Zelandia}}
+* [[Azeri]]: {{t|az|Yeni Zelandiya}}
 * Belarusian: {{t|be|Новая Зеландыя|f|tr=Nóvaja Zelándyja|xs=Belarusian}}, {{t|be|Новая Зэляндыя|f|tr=Nóvaja Zeljándyja|xs=Belarusian}} {{qualifier|Taraškevica orthography}}
-* Bengali: {{t-|bn|নিউজিল্যান্ড}}
+* Bengali: {{t-|bn|নিউজিল্যান্ড}}, {{t|bn|নিউজিল্যান্ড|tr=ni'ujilyanḑ|sc=Beng}}
 * [[Bislama]]: {{t|bi|Niu Zilan}}
 * [[Breton]]: {{t|br|Zeland-Nevez|xs=Breton}}
 * Bulgarian: {{t|bg|Нова Зеландия|f|tr=Nóva Zelándija}}
+* Burmese: {{t|my|နယူးဇီလန္|tr=náyù zilã|sc=Mymr}}
 * [[Catalan]]: {{t|ca|Nova Zelanda}}
 * Chinese:
 *: Mandarin: {{t-|cmn|新西蘭|sc=Hani}}, {{t-|cmn|新西兰|tr=Xīn-Xīlán|sc=Hani}}, {{qualifier|Taiwan}} {{t|cmn|紐西蘭|sc=Hani}}, {{t|cmn|纽西兰|tr=Niǔ-Xīlán|sc=Hani}}
@@ -37,6 +41,7 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 * [[Fiji Hindi]]: {{tø|hif|New Zealand}}
 * Finnish: {{t+|fi|Uusi-Seelanti}}
 * French: {{t+|fr|Nouvelle-Zélande|f}}
+* Georgian: {{t|ka|ახალი ზელანდია|tr=akhali zelandia|sc=Geor}}
 * German: {{t+|de|Neuseeland|n}}
 * Greek: {{t+|el|Νέα Ζηλανδία|f|tr=Néa Zilandía}}
 * Hebrew: {{t|he|ניו זילנד|f|tr=niu ziland}}
@@ -47,25 +52,31 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 * [[Interlingua]]: {{t|ia|Nove Zelanda|xs=Interlingua}}
 * Irish: {{t-|ga|Nua-Shéalainn|f|alt=An Nua-Shéalainn|xs=Irish}}
 * Italian: {{t+|it|Nuova Zelanda|f}}
-* Japanese: {{t-|ja|ニュージーランド|tr=Nyūjīrando}}
+* Japanese: {{t-|ja|ニュージーランド|tr=Nyūjīrando}}, {{t|ja|ニュー・ジーランド|tr=Nyū-Jīrando|sc=Jpan}}
 * [[Kalenjin]]: {{tø|kln|Nyuziland}}
 * [[Kamba]]: {{tø|kam|Nyuziland}}
+* Kazakh: {{t|kk|Жаңа-Зеландия|tr=Jaña-Zelandiya|sc=Cyrl}}
 * [[Khmer]]: {{t|km|ញូហ្សេលែនដ៍|tr=nyuuzeilɛɛn|sc=Khmr}}
 * [[Kikuyu]]: {{tø|ki|Nyuziland}}
-{{trans-mid}}
 * Korean: {{t+|ko|뉴질랜드|tr=Nyujillaendeu|sc=Hang}}
+* [[Kyrgyz]]: {{t|ky|Жаңы Зеландия|tr=Jañı Zelandiya|sc=Cyrl}}
+{{trans-mid}}
+* Lao: {{t|lo|ນູແວນ​ເຊລັງ|sc=Laoo}}
 * Latin: {{t|la|Nova Zelandia|f}}
+* Latvian: {{t|lv|Jaunzēlande|f}}
+* Lithuanian: {{t|lt|Naujoji Zelandija|f}}
 * [[Luhya]]: {{tø|luy|Niuziland}}
 * [[Luo]]: {{tø|luo|Niuziland}}
 * [[Luxembourgish]]: {{t|lb|Neiséiland}}
 * [[Macedonian]]: {{t+|mk|Нов Зеланд|m|tr=Nov Zéland}}
+* Malay: {{t|ms|New Zealand}}
 * Maltese: New Zealand
 * [[Manx]]: {{t-|gv|Noa Heelan|f|xs=Manx}}, {{t-|gv|Seelan Noa|f|alt=Yn Teelan Noa|xs=Manx}}
 * Maori: {{t-|mi|Aotearoa|xs=Maori}}, {{t|mi|Niu Tireni|xs=Maori}}
 * [[Meru]]: {{tø|mer|Nyuziland}}, {{tø|mer|Nyuziland}}
 * [[Nahuatl]]: {{t|nah|Yancuīc Zetlālpan}}
 * Norwegian: {{t+|no|New Zealand}}, {{t-|no|Ny-Zealand}}
-* Persian: {{t|fa|نیوزیلند|xs=Persian}}
+* Persian: {{t|fa|نیوزیلند|xs=Persian}}, {{t|fa|نیوزیلند|tr=Niyuzilend|sc=fa-Arab}}, {{t|fa|زلاند نو|tr=Zelând-e Nou|sc=fa-Arab}}, {{t|fa|زلاند جدید|tr=Zelând-e Jadid|sc=fa-Arab}}
 * Polish: {{t+|pl|Nowa Zelandia|f}}
 * Portuguese: {{t+|pt|Nova Zelândia|f}}
 * [[Punjabi]]: {{t|pa|ਨਿਊਜੀਲੈਂਡ |sc=Guru|xs=Punjabi}}, {{t|pa|ਅਮਰੀਕਾ|f|sc=Guru|xs=Punjabi}}
@@ -74,15 +85,20 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Нови Зеланд|m|alt=Но̏вӣ Зѐланд|sc=Cyrl|xs=Serbo-Croatian}}
 *: Roman: {{t|sh|Novi Zeland|m|alt=Nȍvī Zèland|xs=Serbo-Croatian}}
+* [[Sinhalese]]: {{t|si|නවසීලන්‍තය|tr=navasīlantaya|sc=Sinh}}
 * Slovene: {{t+|sl|Nova Zelandija|f}}
 * Spanish: {{t+|es|Nueva Zelanda|f}}, {{t+|es|Nueva Zelandia|f}}
 * Swahili: {{t+|sw|Nyuzilandi|xs=Swahili}}
 * Swedish: {{t+|sv|Nya Zeeland}}
+* [[Tagalog]]: {{t|tl|Bagong Selanda}}
 * [[Tahitian]]: {{tø|ty|Aotearoa}}
+* [[Tajik]]: {{t|tg|Зеландияи Нав|tr=Zelandiyai Nav|sc=Cyrl}}
 * Thai: {{t|th|ประเทศนิวซีแลนด์|tr=bpràtêt niw-seelaen}}, {{t|th|นิวซีแลนด์|tr=niw-seelaen}}
 * Turkish: {{t+|tr|Yeni Zelanda}}
+* [[Turkmen]]: {{t|tk|Täze Zelandiýa}}
 * Ukrainian: {{t|uk|Нова Зеландія|f|tr=Nová Zelándija|xs=Ukrainian}}
-* Urdu: {{t|ur|نیوزی لینڈ|xs=Urdu}}
+* Urdu: {{t|ur|نیوزی لینڈ|xs=Urdu}}, {{t|ur|نیوزی‌لینڈ|tr=n'yūzīlaṇḍ|sc=ur-Arab}}
+* Uzbek: {{t|uz|Yangi Zelandiya}}
 * Vietnamese: {{t-|vi|New Zealand|xs=Vietnamese}}, {{t|vi|Tân Tây Lan|xs=Vietnamese}} ({{t-|vi|新西蘭|sc=Hani|xs=Vietnamese}})
 * Welsh: {{t|cy|Seland Newydd|xs=Welsh}}
 * [[Wolof]]: {{t|wo|Seland-Gu-Bees}}
