--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -81,7 +81,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Filipino: [[maganda]]
 * Finnish: {{t+|fi|kaunis}}
 * French: {{t+|fr|beau|m}}, {{t+|fr|belle|f}}
-* Georgian: {{t|ka|მშვენიერი|tr=mšvenieri|sc=Geor}}
+* Georgian: {{t|ka|მშვენიერი|tr=mšvenieri|sc=Geor}}, {{t|ka|ლამაზი|tr=lamazi|sc=Geor}}
 * German: {{t+|de|schön}}
 * Greek: {{t+|el|ωραίος|m}} (oraíos), {{t+|el|όμορφος|m}} (ómorfos)
 * Hebrew: {{t+|he|יפה|m|tr=yafe}}, {{t+|he|יפה|f|tr=yafa}}
@@ -93,8 +93,8 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * [[Interlingua]]: {{t|ia|belle}}
 * Irish: {{t-|ga|álainn|xs=Irish}}
 * Italian: {{t+|it|bello}}
-{{trans-mid}}
 * Japanese: {{t+|ja|美しい|tr=うつくしい, utsukushii}}, {{t-|ja|綺麗}}, {{t-|ja|きれい|tr=kirei}}, {{t+|ja|素敵|tr=すてき, suteki}}
+{{trans-mid}}
 * [[Khmer]]: {{Khmr|[[ស្អាត]]}} (saāt), {{t-|km|ល្អ|tr=l'ɑɑ|sc=Khmr|xs=Khmer}}
 * Korean: {{qualifier|attributive}} {{t|ko|아름다운|tr=areumdaun|sc=Kore}}, {{qualifier|predicative}} {{t|ko|아름답다|tr=areumdapda|sc=Kore}}
 * Kurdish: {{ku-Arab|[[جوان]]}}, {{ku-Arab|[[ئێسک سووک]]}}
