t+tk:[[Fransiýa]] ([[WT:EDIT|Assisted]]) <France#14135177>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -145,6 +145,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Thai: {{t+|th|ฝรั่งเศส|tr=fàràngsèt}}
 * [[Tok Pisin]]: [[Pranis]]
 * Turkish: {{t+|tr|Fransa}}
+* [[Turkmen]]: {{t|tk|Fransiýa}}
 * Ukrainian: {{t+|uk|Франція|f|tr=Fráncija|xs=Ukrainian}}
 * Urdu: {{t|ur|فرانس|tr=frāns|xs=Urdu}}
 * Vietnamese: {{t+|vi|Pháp|xs=Vietnamese}}, {{t|vi|nước Pháp|xs=Vietnamese}}
