t+lb:[[gerode]] ([[WT:EDIT|Assisted]]) <straight#14136036>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -118,7 +118,7 @@
 * Italian: {{t+|it|dritto}}
 * Japanese: {{t|ja|真直ぐ|tr=まっすぐな, massugu-na|alt=真直ぐな|sc=Jpan}}
 * Kurdish: {{ku-Arab|[[ڕێک]]}}
-* [[Luxembourgish]]: {{t|lb|riicht}}
+* [[Luxembourgish]]: {{t|lb|riicht}}, {{t|lb|gerode}}
 * [[Macedonian]]: {{t-|mk|прав|m|tr=prav}}
 * Navajo: {{tø|nv|kʼézdon}}
 * Persian: {{t|fa|مستقیم|sc=fa-Arab}}
