/* Derived terms */ <pull#14150778>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -63,11 +63,12 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * [[pull oneself together]]
 * [[pull one's weight]]
 * [[pull out]]
+* [[pull out of the fire]]
 * [[pull over]]
 <!--"pullover" is derived from "pull over"-->
 * [[pull-quote]]
-* [[pull rank]]
 {{rel-mid3}}
+* [[pull rank]]
 * [[pull round]]
 * [[pull somebody's leg]]
 * [[pull the other one]] 
