--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -129,6 +129,10 @@ From {{etyl|enm}} {{term|floten|lang=enm}}, from {{etyl|ang}} {{term|flotian||to
 #: ''It is time to float this horse's teeth.''
 # {{poker}} To perform a [[float#Noun|float]].
 
+====Derived terms====
+* [[float someone's boat]]
+* [[whatever floats your boat]]
+
 ====Translations====
 {{trans-top|be supported by a liquid}}
 * Arabic: {{t|ar|يطفو}}
