--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -64,7 +64,7 @@
 * Norwegian: {{t-|no|oliven}}
 * Persian: {{t+|fa|زیتون|xs=Persian}}
 * Polish: {{t+|pl|oliwka}}
-* Portuguese: {{t+|pt|azeitona|f}}
+* Portuguese: {{t+|pt|azeitona|f}}, {{t|pt|oliva|f}}
 * Romanian: {{t+|ro|măslină|f}}, {{t+|ro|olivă|f}}
 * [[Romansch]]: {{t|rm|uliva|f}}, {{t|rm|oliva|f}}, {{t|rm|uleiva|f}}
 * Russian: {{t+|ru|оливка|f|tr=olívka}}, {{t+|ru|маслина|f|tr=maslína}}
