--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -4,9 +4,7 @@
 {{etyl|enm}} {{term|souken|souken, suken||lang=enm}} from {{etyl|ang}} {{term|sucan|sūcan|to suck|lang=ang}} from {{proto|Germanic|sūganan|to suck|lang=en}} from {{proto|Indo-European|seug-||sug-||suk-||lang=en}}. Akin to {{ang}} {{term|sugan|sūgan||lang=ang}} "to suck", {{etyl|goh|-}} {{term|sugan|sūgan||lang=goh}} "to suck" ({{etyl|de|-}} {{term|saugen|saugen||lang=de}}), {{ang}} {{term|socian|socian||lang=ang}} "to cause to suck up, soak". More at [[soak]].
 
 ===Pronunciation===
-* {{AHD|so͝ok}}, {{IPA|/sʊk/}}, {{SAMPA|/sUk/}}
-* {{rhymes|ʊk}}
-* {{AHD|sŭk}}, {{IPA|/sʌk/}}, {{SAMPA|/sVk/}}
+* {{IPA|/sʌk/}}
 * {{audio|en-us-suck.ogg|Audio (US)}}
 * {{rhymes|ʌk}}
 
