--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -60,6 +60,7 @@
 * Latvian: [[olīve#Latvian|olīve]] {{f}}
 * [[Luxembourgish]]: {{t|lb|Oliv|f}}
 * [[Macedonian]]: {{t|mk|маслинка|f|tr=máslinka}}
+* Malay: {{t|ms|zaitun}}
 * Maltese: [[żebbuġa]] {{f}}
 * Norwegian: {{t-|no|oliven}}
 * Persian: {{t+|fa|زیتون|xs=Persian}}
