--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -7,7 +7,7 @@
 * {{audio|En-us-Israel.ogg|Audio (US)}}
 
 ===Etymology===
-From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Biblical name for [[Jacob]] after he wrestles with an adversary.
+From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Biblical name for [[Jacob]] after he wins a wrestling match with God (YHWH).
 
 ===Proper noun===
 {{en-proper noun}}
