--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -23,6 +23,8 @@ Also simplification of [[詹]], as in [[担]].
 ====References====
 * {{Han ref|kx=0489.030|dkj=13734|dj=0850.010|hdz=21483.010|uh=65E6|ud=26086|bh=A5B9|bd=42425}}
 
+[[Category:CJKV simplified characters (second round)]]
+
 ----
 
 ==Cantonese==
