--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -93,6 +93,7 @@
 * [[Norwegian Bokmål]]: {{tø|nb|skuespill|n}}
 * Polish: {{t+|pl|sztuka}}
 * Russian: {{t+|ru|пьеса|f|tr=p’jésa}}
+* Spanish: {{t|es|obra|f}}
 * Swahili: {{t+|sw|tamthilia|xs=Swahili}}
 * Swedish: {{t+|sv|pjäs|c}}
 * Turkish: {{t+|tr|oyun}}
@@ -155,6 +156,7 @@
 * Polish: {{t+|pl|gra|f}}
 * Russian: {{t+|ru|игра|f|tr=igrá}}
 * Slovene: {{t+|sl|igra|f}}
+* Spanish: {{t|es|juego|m}}
 * Swahili: {{t+|sw|tamthilia|xs=Swahili}}
 * Swedish: {{t+|sv|spel|c}}
 {{trans-bottom}}
@@ -163,6 +165,7 @@
 * Finnish: {{t-|fi|siirto}}
 * [[Macedonian]]: {{t-|mk|игра|f|tr=ígra}}
 {{trans-mid}}
+* Spanish: {{t|es|jugada|f}}
 * Swahili: {{t+|sw|tamthilia|xs=Swahili}}
 {{trans-bottom}}
 
@@ -396,6 +399,7 @@
 * Portuguese: {{t+|pt|atuar}}, {{t+|pt|representar}}
 * Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}
 * Slovene: {{t+|sl|igrati}}
+* Spanish: {{t|es|actuar}}
 * Swahili: {{t+|sw|tamthilia|xs=Swahili}}
 * Swedish: {{t|sv|agera}}, {{t|sv|spela}} en roll
 {{trans-bottom}}
