--- a/en/旮/旮.16918.wikitext
+++ b/en/旮/旮.16918.wikitext
@@ -23,8 +23,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[xù]] ([[xu4]])|wg=hsü<sup>4</sup>}}
-
+{{cmn-hanzi|pin=[[xù]] ([[xu4]])|wg=hsü<sup>4</sup>}}, [[gā]]
 # {{defn|lang=cmn|sort=日02}}
 
 [[fr:旮]]
