changing [[Category:English homophones]] to [[Category:English terms with homophones]] per [[WT:RFDO]]changing [[Category:English homophones]] to [[Category:English terms with homophones]] per [[WT:RFDO]] <come#14216590>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -227,7 +227,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * {{rank|old|came|men|107|come|without|make|def}}
 
 [[Category:English copulative verbs]]
-[[Category:English homophones]]
+[[Category:English terms with homophones]]
 [[Category:English irregular past participles]]
 [[Category:English irregular verbs]]
 [[Category:English past participles]]
