changing [[Category:English homophones]] to [[Category:English terms with homophones]] per [[WT:RFDO]]changing [[Category:English homophones]] to [[Category:English terms with homophones]] per [[WT:RFDO]] <straight#14216644>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -335,7 +335,7 @@
 * [[straight flush]]
 
 [[Category:1000 English basic words]]
-[[Category:English homophones]]
+[[Category:English terms with homophones]]
 
 [[ar:straight]]
 [[cs:straight]]
