t+ryu:[[ぱし]] ([[WT:EDIT|Assisted]]) <bridge#14221287>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -125,6 +125,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * Nepali: {{t-|ne|पुल|sc=Deva|xs=Nepali}}
 * Norwegian: {{t+|no|bro|m|f}}, {{t+|no|bru|m|f}}
 * [[Occitan]]: [[pònt]]
+* [[Okinawan]]: {{tø|ryu|ぱし|tr=pashi}}
 * [[Old English]]: {{t-|ang|brycg|f|xs=Old English}}
 * {{trreq|or}}
 * Ossetic: {{tø|os|хид|tr=xid|sc=Cyrl|xs=Ossetian}}
