--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -2,6 +2,7 @@
 {{wikipedia|United States|United States of America}}
 
 ===Proper noun===
+[[Image:Flag of the United States.svg|right|thumb|The flag of the United States of America]]
 '''the [[united|United]] [[states|States]] [[of]] [[America]]'''
 
 # A country in [[North America]], sharing land borders with [[Canada]] and [[Mexico]], stretching from the [[Atlantic Ocean|Atlantic]] to the [[Pacific Ocean]]{{,}} and including [[Alaska]], [[Hawaii]]{{,}} and several territories.
