--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -498,6 +498,8 @@ From late {{etyl|non|no}} {{term|port|lang=non}} {{n}}, {{etyl|gmq-mno|no}} {{te
 ====Related terms====
 * [[portuar]]
 
+====See also====
+* [[liman]]
 ----
 
 ==Scottish Gaelic==
