--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -85,6 +85,7 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|c
 * Dutch: {{t+|nl|kost}}
 * Finnish: {{t+|fi|hinta}}, {{t+|fi|kustannus}}
 * French: {{t|fr|coût|m}}, {{t|fr|frais|m}}
+* {{trreq|Georgian}}
 * German: {{t+|de|Kosten|f|p}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos}}, {{t+|el|δαπάνη|f|tr=dapáni}}, {{t+|el|τίμημα|n|tr=tímima}}, {{t+|el|αντίτιμο|n|tr=antítimo}}
 * Hebrew: {{t|he|עלות|tr='alut|f}}
@@ -102,6 +103,7 @@ From {{etyl|enm}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{term|c
 * Spanish: {{t+|es|costo|m}}
 * Swahili: {{t+|sw|gharama|xs=Swahili}}
 * Swedish: {{t+|sv|kostnad|c}}
+* {{trreq|Turkish}}
 {{trans-bottom}}
 
 {{trans-top|negative consequence or loss}}
