--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -155,6 +155,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Estonian: {{t-|et|ploom}}
 * Finnish: {{t+|fi|luumu}}
 * French: {{t+|fr|prune|f}}
+* Georgian: {{t|ka|ქლიავი|tr=k'liavi|sc=Geor}}
 * German: {{t+|de|Pflaume|f}}, {{t+|de|Zwetschge|f}}
 * Greek: {{t+|el|δαμάσκηνο|n}} (damáskino)
 ** Ancient Greek: [[προῦμνον]] {{n}}
