--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -34,6 +34,7 @@
 
 ====Compounds====
 {{top3}}
+* {{l|ja|sc=Jpan|土地|tr=とち, tochi}}: [[ground]]; [[land]]
 * {{l|ja|sc=Jpan|意地悪|tr=いじわる, ijiwaru}}
 * {{l|ja|sc=Jpan|地球|tr=ちきゅう, chikyū}}
 * {{l|ja|sc=Jpan|地底|tr=ちてい, chitei}}
