t+wym:[[Daojćłaond]] t-balance ([[WT:EDIT|Assisted]]) <Germany#14299374>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -84,8 +84,8 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * Lithuanian: {{t+|lt|Vokietija|f|xs=Lithuanian}}
 * [[Livonian]]: [[Saksāmō]]
 * [[Low German]]: {{t|nds|Düütschland|n}}, {{qualifier|Plauttdietsch:}} {{t|nds|Dietschlaund|n}}
-{{trans-mid}}
 * [[Luhya]]: {{tø|luy|Jamani}}
+{{trans-mid}}
 * [[Luxembourgish]]: [[Däitschland]] {{n}}
 * [[Macedonian]]: {{t+|mk|Германија|f|tr=Germánija}}
 * Malay: {{t-|ms|Jerman|xs=Malay}}
@@ -140,6 +140,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
 * [[Uyghur]]: {{t-|ug|گېرمانىيە|tr=gérmaniye|sc=ug-Arab|xs=Uyghur}}
 * Uzbek: {{t|uz|Olmoniya}}
 * Vietnamese: {{t|vi|nước Đức|xs=Vietnamese}}, {{t+|vi|Đức|xs=Vietnamese}} ({{t-|vi|德|sc=Hani|xs=Vietnamese}})
+* [[Vilamovian]]: {{tø|wym|Daojćłaond}}
 * [[Volapük]]: {{t|vo|Deutän}}, {{qualifier|obsolete}} {{t|vo|Deut}}
 * [[Võro]]: [[S'aksamaa]]
 * Welsh: {{t+|cy|Almaen|f|xs=Welsh}}
