--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -71,8 +71,8 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * [[Latgalian]]: {{tø|ltg|pasirds}}
 * Latin: [[stomachus]] {{m}}
 * Latvian: {{t|lv|kuņģis|m}}
-{{trans-mid}}
 * [[Lower Sorbian]]: [[žołdk]] {{m}}
+{{trans-mid}}
 * [[Luo]]: {{tø|luo|ich|xs=Luo}}
 * [[Macedonian]]: {{t|mk|желудник|m|tr=žéludnik}}, {{t-|mk|стомак|m|tr=stómak}}
 * Maltese: {{t-|mt|stonku|m|xs=Maltese}}
@@ -101,6 +101,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Ukrainian: {{t|uk|шлунок|m|tr=šlúnok|sc=Cyrl}}
 * [[Upper Sorbian]]: [[žołdk]] {{m}}
 * Vietnamese: {{t|vi|dạ dày}}
+* [[Vilamovian]]: {{tø|wym|maoga}}
 * [[Volapük]]: {{t|vo|stomäg|xs=Volapük}}
 * Welsh: {{t+|cy|bola|xs=Welsh}}
 * [[West Frisian]]: [[mage]]
