--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -89,7 +89,7 @@ Literally, “for the sake of example”.  Used to introduce an [[example]] or l
 
 ==Latin==
 
-==={{abbreviation|Latin}}===
+==={{abbreviation|SQUIRREL}}===
 '''e.g.'''
 
 # [[exemplum#squirrel|exemplī]] [[gratia|grātia]] (for example)
