--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -41,7 +41,9 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * Icelandic: {{t|is|þ.e.}} {{qualifier|{{t|is|það}} {{t|is|er}}}}, {{t|is|þ.e.a.s.}} {{qualifier|{{t|is|það}} {{t|is|er}} {{t|is|að}} {{t|is|segja}}}}
 * Italian: {{t+|it|cioè}}
 * [[Malayalam]]: [[അതായത്]] (athaayathu)
-* Norwegian: {{t+|no|dvs.}}
+* Norwegian:
+*: Bokmål: {{t+|nb|dvs.}}
+*: Nynorsk: {{t|nn|d.e.}}, {{t|nn|dvs.}}
 * Polish: [[tzn.]] {{qualifier|[[to]] [[znaczy]]}}, [[tj.]] {{qualifier|[[to]] [[jest]]}}
 * Portuguese: [[isto é]],  {{t|pt|ou seja}}
 * Russian: [[т. е.]] ([[то есть]], ''tó jest’'')
