t+fr:[[interpréter]] t+fr:[[s'amuser]] t+fr:[[tourner]] ([[WT:EDIT|Assisted]]) <play#14730427>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -264,7 +264,7 @@
 * Dutch: {{t+|nl|spelen}}
 * Esperanto: {{t-|eo|ludi|xs=Esperanto}}
 * Finnish: {{t+|fi|leikkiä}}
-* French: {{t+|fr|jouer}}
+* French: {{t+|fr|jouer}}, {{t|fr|s'amuser}}
 * [[Galician]]: {{t-|gl|xogar|xs=Galician}}
 * Georgian: {{t|ka|თამაში|tr=t'amaši|sc=Geor}}, {{t|ka|თამაშობა|tr=t'amašoba|sc=Geor}}
 * German: {{t+|de|spielen}}
@@ -395,7 +395,7 @@
 * Dutch: {{t+|nl|optreden}}
 * Esperanto: {{t|eo|roli}}
 * Finnish: {{t-|fi|näytellä}}
-* French: {{t|fr|jouer}}
+* French: {{t|fr|jouer}}, {{t|fr|interpréter}}
 * German: {{t+|de|spielen}}
 * Greek: {{t|el|παίζω|tr=pézo}}
 * Hebrew: {{t|he|שיחק|tr=sikhék}}
@@ -453,7 +453,7 @@
 * Czech: {{t+|cs|hrát}}
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|afspelen}}
 * Finnish: {{t+|fi|soittaa}}
-* French: {{t+|fr|mettre}}, {{qualifier|media already inserted}} {{t+|fr|lancer}}
+* French: {{t+|fr|mettre}}, {{qualifier|media already inserted}} {{t+|fr|lancer}}, {{qualifier|the media is the subject}} {{t|fr|tourner}}
 * German: {{t|de|abspielen}},  {{t+|de|spielen}}
 * Hebrew: {{t|he|השמיע|tr=hishmía}}
 * Hungarian: {{t-|hu|lejátszik}}
