--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -453,7 +453,7 @@
 * Czech: {{t+|cs|hrát}}
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|afspelen}}
 * Finnish: {{t+|fi|soittaa}}
-* French: {{t+|fr|mettre}}, {{qualifier|media already inserted}} {{t+|fr|lancer}}, {{qualifier|the media is the subject}} {{t|fr|tourner}}
+* French: {{qualifier|the media is being played}} {{t+|fr|mettre}}, {{qualifier|to play an already inserted media}} {{t+|fr|lancer}}, {{qualifier|the media is the subject}} {{t|fr|tourner}} / {{t|fr|jouer}}
 * German: {{t|de|abspielen}},  {{t+|de|spielen}}
 * Hebrew: {{t|he|השמיע|tr=hishmía}}
 * Hungarian: {{t-|hu|lejátszik}}
