t+ms:[[bermain]] ([[WT:EDIT|Assisted]]) <play#14835361>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -284,6 +284,7 @@
 * Latin: {{t-|la|ludo}}
 * Lithuanian: {{t-|lt|žaisti|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|игра|tr=ígra}}
+* Malay: {{t|ms|bermain}}
 * Navajo: {{tø|nv|naané}}
 * [[Old English]]: {{t-|ang|lacan|alt=lācan|xs=Old English}}
 * [[Pashto]]: {{t-|ps|لوبې كول|tr=lobe kawəl|sc=ps-Arab|xs=Pashto}}, {{t-|ps|لوبول|tr=lobawəl|sc=ps-Arab|xs=Pashto}}
