t+tt:[[Америка Кушма Штатлары]] t+ku:[[دەولەتێن یەکبوویییێن ئەمەریکایێ]] t-balance ([[WT:EDIT|Assisted]]) <United States of America#15145561>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -60,6 +60,7 @@
 * Kazakh: {{t|kk|Америка Құрама Штаттары|tr=Amerika Qurama Ştattarı|sc=Cyrl}}
 * [[Khmer]]: {{t|km|សហរដ្ឋអាមេរិក|tr=sahā rōŭt āmērik|sc=Khmr}}
 * Korean: {{t|ko|미국|tr=Miguk|sc=Kore}} ({{t|ko|美國|sc=Kore}}), {{t|ko|아메리카 합중국|tr=Amerika Hapjungguk|sc=Kore}}, {{t|ko|미합중국|tr=Mihapjungguk|sc=Kore}} ({{t|ko|美合衆國|sc=Kore}})
+* Kurdish: {{t|ku|دەولەتێن یەکبوویییێن ئەمەریکایێ|tr=Dewletên Yekbûyîyên Emerîkayê|sc=ku-Arab}}
 * [[Kyrgyz]]: {{t|ky|Америка Кошмо Штаттары|tr=Amerika Koşmo Ştattarı|sc=Cyrl}}
 * [[Lakota]]: {{tø|lkt|Mílahaŋska Tȟamákȟočhe}}
 * [[Lao]]: {{t-|lo|ສະຫະລັດອະເມລິກາ|tr=saha lat 'ameelikaa|sc=Laoo|xs=Lao}}
@@ -102,6 +103,7 @@
 * [[Tagalog]]: {{t|tl|Estados Unidos ng Amerika|xs=Tagalog}}
 * [[Tajik]]: {{t|tg|Иёлоти Муттаҳидаи Амриқо|tr=Iyoloti Muttahidai Amriqo|sc=Cyrl}}
 * [[Tamil]]: {{t|ta|அமெரிக்க ஐக்கிய நாடு|tr=amerikka aikkiya nāṭu|sc=Taml}}
+* [[Tatar]]: {{t|tt|Америка Кушма Штатлары|tr=Amerika Quşma Ştatları|sc=Cyrl}}
 * [[Telugu]]: {{t|te|అమెరికా సంయుక్త రాష్ట్రములు|tr=amerikā sanyukta rāṣṭramulu|sc=Telu}}
 * Thai: {{Thai|[[สหรัฐอเมริกา]]}} (sàhà rát àmayrígaa), {{t|th|อเมริกา|tr=àmayrígaa}}, {{t|th|ประเทศสหรัฐอเมริกา|tr=bpràtêt sàhà rát àmayrígaa}}
 * Turkish: {{t+|tr|Amerika Birleşik Devletleri}}, {{t-|tr|Birleşik Devletler}}, {{t+|tr|ABD}}, {{t+|tr|Amerika}}
