--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -51,7 +51,7 @@ In current form, {{Han compound|〡|t1=one|日|t2=day}}, representing the day be
 * [[旧居]] (''kyūkyo''): former residence
 {{mid2}}
 * [[旧株]] (''kyūkabu''): old stock
-* [[旧弊な]] (''kyūhei na''): old-fashioned
+* [[旧弊]] (''kyūhei''): old-fashioned
 * [[旧軍人]] (''kyūgunjin''): ex-soldier
 * [[旧正月]] (''kyūshōgatsu''): lunisolar New Year
 * [[旧世界]] (''kyūsekai''): the old world
