--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -17,6 +17,7 @@
 # {{countable}} (''turn-based games'') An action carried out when it is one's turn to play.
 # {{countable}} A [[literary]] composition, intended to be represented by actors impersonating the characters and speaking the dialogue.
 # {{countable}} A theatrical performance featuring [[actor]]s.
+#: ''We saw a two-act '''play''' in the theatre.''
 # {{countable}} A major move by a business.
 # {{countable}} A geological formation that contains an accumulation or prospect of hydrocarbons or other resources.
 # {{uncountable}} The extent to which a part of a mechanism can move freely.
