/* Alternative forms */[[Fraunce]]. <France#15213191>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -3,6 +3,9 @@
 {{wikipedia}}
 [[File:LocationFrance.svg|thumb|Map showing the location of France (in red).]]
 
+===Alternative forms===
+* [[Fraunce]] {{qualifier|obsolete}}
+
 ===Etymology===
 From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}}, {{etyl|la}} {{term|Francia|lang=la}}, from {{term|Franci|Francī|lang=la}}, the name of a Germanic tribe. Etymology of ''Francī'' itself is uncertain, but of {{proto|Germanic}} origin, possibly related to Sanskrit {{term|firang||foreign|lang=sa|sc=Latn}}.<ref>A. C. Murray, ''From Roman to Merovingian Gaul: A Reader''. Broadview Press Ltd, 2000. p. 1.</ref> Compare {{term|Frank|lang=en}}.
 
