--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -6,8 +6,8 @@
 
 # [[docile]]<!-- See talk and http://www.kangxizidian.com/kangxi/0109.gif -->
 # [[dwarf]], [[short]]<!-- Please show the example  to ferret out a reasonable explanation in literature　and history books -->
-# {{historical}} [[Japan]]
-# {{historical}} [[Japanese]]
+# {{historical|lang=mul}} [[Japan]]
+# {{historical|lang=mul}} [[Japanese]]
 
 ====References====
 * {{Han ref|kx=0109.060|dkj=00796|dj=0232.040|hdz=10179.080|uh=502D|ud=20525|bh=ADD8|bd=44504}}
