--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -60,6 +60,7 @@
 * Spanish: {{t+|es|tortuga|f}}, {{t|es|tortuga terrestre|f}}, {{t|es|morrocoy|m}} {{qualifier|Venezuela}}
 * Swahili: {{t+|sw|kobe|xs=Swahili}}
 * Swedish: {{t+|sv|sköldpadda}}
+* [[Tamil]]: {{t|ta|ஓடன்|tr=ōṭaṉ|sc=Taml}}
 * [[Telugu]]: [[తాబేలు]] (taabealu)
 * [[Tswana]]: {{t-|tn|khudu|xs=Tswana}} (9/10)
 * Turkish: {{t+|tr|kaplumbağa}}, {{t+|tr|tosbağa}}
