--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -41,9 +41,10 @@ Or, 晶 is the sound. (?)
 
 ====Compounds====
 {{der-top|Compounds}}
+* [[無星]] ([[むほし]], ''[[muhoshi]]''): when the [[star]]s aren't visible due to [[rain]] or some other reason
 * {{l|ja|星隕}}
 * {{l|ja|星辰}}
-* {{l|ja|星星}}, {{l|ja|星々}}
+* {{l|ja|星星}}, {{l|ja|星々}}: "''[[stars]]''" ([[plural]])
 * {{l|ja|星占}}
 * {{l|ja|星霜}}
 * {{l|ja|星妃}}
