--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -41,24 +41,22 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Albanian: [[Izraeli]]
 * Arabic: {{t-|ar|إسرائيل|m|tr='isra'íl}}
 * Armenian: {{t-|hy|Իսրայել|tr=Israyel}}
-* Belarusian: [[Ізраіль]] {{m}}
-* Bengali: {{t-|bn|ইসরায়েল}}
-* Bosnian: {{t-|bs|Izrael|m}}
+* Belarusian: {{t|be|Ізраіль|m|tr=Izráil’}}
+* Bengali: {{t-|bn|ইসরায়েল|tr=israyel}}
 * [[Breton]]: {{t-|br|Israel|xs=Breton}}
-* Bulgarian: {{t+|bg|Израел|m|tr=Izrael}}
-* Burmese: {{t|my|အစ္စရေး|sc=Mymr|xs=Burmese}}
+* Bulgarian: {{t+|bg|Израел|m|tr=Izráel}}
+* Burmese: {{t|my|အစ္စရေး|tr=iʿsẏè|sc=Mymr|xs=Burmese}}
 * [[Catalan]]: {{t-|ca|Israel|m}}
 * Chinese:
 *: Mandarin: {{t-|cmn|以色列|tr=Yǐsèliè|sc=Hani}}
-* Croatian: {{t+|hr|Izrael|m}}
 * Czech: {{t+|cs|Izrael}}
 * Danish: {{t+|da|Israel}}
-* Dutch: {{t+|nl|Israël}}
+* Dutch: {{t+|nl|Israël|n}}
 * Esperanto: {{t-|eo|Israelo|xs=Esperanto}}, {{t-|eo|Izraelo|xs=Esperanto}}
 * Estonian: {{t+|et|Iisrael}}
 * Finnish: {{t+|fi|Israel}}
-* French: {{t+|fr|Israël}}
-* German: {{t+|de|Israel}}
+* French: {{t+|fr|Israël|m}}
+* German: {{t+|de|Israel|n}}
 * Greek: {{t+|el|Ισραήλ|n|tr=ísra'íl}}
 * Hebrew: {{t+|he|ישראל|m|alt=יִשְׂרָאֵל|tr=yiśra'ēl}}
 * Hindi: {{t-|hi|इस्राइल|m|tr=isrā'il|xs=Hindi}}
@@ -71,7 +69,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Japanese: {{t+|ja|イスラエル|tr=isuraeru}}
 * [[Kalenjin]]: {{tø|kln|Israel}}
 * [[Kamba]]: {{tø|kam|Israel}}
-* [[Kannada]]: [[ಇಸ್ರೇಲ್]]
+* [[Kannada]]: {{t|kn|ಇಸ್ರೇಲ್|tr=isrel|sc=Knda}}
 * [[Khmer]]: {{t|km|អ៊ីស្រាអែល|tr=iisraa’ael|sc=Khmr}}
 * [[Kikuyu]]: {{tø|ki|Israel}}
 * Korean: {{t+|ko|이스라엘|tr=Iseura-el|sc=Hang}}
@@ -92,26 +90,26 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * [[Old Church Slavonic]]: [[Їздраил҄ь]]
 * [[Pashto]]: {{t|ps|اسرايل|sc=ps-Arab|xs=Pashto}}
 * Persian: {{t+|fa|اسرائیل|tr=Esrâ’il|xs=Persian}}
-* Polish: {{t+|pl|Izrael}}
+* Polish: {{t+|pl|Izrael|m}}
 * Portuguese: {{t+|pt|Israel}}
 * Romanian: {{t-|ro|Israel|n}}
 * Russian: {{t+|ru|Израиль|m|tr=Izráil’}}
 * [[Samogitian]]: {{tø|sgs|Izraelės|m}}, {{tø|sgs|Izraele Valstībė|f}}
 * Sanskrit: {{t|sa|इस्रेल|xs=Sanskrit}}
 * [[Scottish Gaelic]]: {{t-|gd|Iosrael|f|xs=Scottish Gaelic}}
-* Serbian:
-*: Cyrillic: {{t-|sr|Израел|m|sc=Cyrl}}
-*: Roman: [[Izrael]] {{m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|Израел|m|sc=Cyrl|xs=Serbo-Croatian}}
+*: Roman: {{t|sh|Izrael|m|xs=Serbo-Croatian}}
 * [[Sinhalese]]: {{t|si|ඊශ්‍රායෙලය|tr=īśrāyelaya|sc=Sinh}}
 * Slovene: {{t+|sl|Izrael|m}}
-* Spanish: {{t+|es|Israel}}
+* Spanish: {{t+|es|Israel|m}}
 * Swahili: {{t+|sw|Israeli|xs=Swahili}}
 * Swedish: {{t+|sv|Israel}}
 * [[Tajik]]: {{t|tg|Исроил|tr=Isroil|sc=Cyrl}}
-* [[Tatar]]: {{t-|tt|İsrael|xs=Tatar}}
+* [[Tatar]]: {{t|tt|Израиль|tr=İsrael|sc=Cyrl}}
 * Thai: {{t|th|ประเทศอิสราเอล|tr=bpràtâyt ìtsàrăa-ayn}},  {{t|th|อิสราเอล|tr=ìt-sà-răa-ayn}}
 * Turkish: {{t+|tr|İsrail}}
-* Ukrainian: [[Ізраїль]] (Izrajil’) {{m}}
+* Ukrainian: {{t|uk|Ізраїль|m|tr=Izrájil’}}
 * Urdu: {{t-|ur|اسرائیل|m|tr=isrā'il|xs=Urdu}}
 * Vietnamese: {{t+|vi|Israel|xs=Vietnamese}}
 * Yiddish: {{t-|yi|ישראל|alt=ישׂראל|tr=Yisroel|xs=Yiddish}}
