t+fa:[[گوجه]] t-balance ([[WT:EDIT|Assisted]]) <plum#15403150>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -169,8 +169,8 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * {{trreq|Khmer}}
 * Korean: {{t+|ko|자두|tr=jadu|sc=Hang}}, {{t-|ko|서양자두|tr=seoyangjadu|sc=Hang}}
 * [[Lao]]: {{t|lo|ໝາກໝັ້ນ|sc=Laoo}}
-{{trans-mid}}
 * Latin: {{t-|la|prunum|n|alt=prūnum}}
+{{trans-mid}}
 * Latvian: [[plūme]] {{f}}
 * Lithuanian: {{t+|lt|slyva|xs=Lithuanian}}
 * [[Luxembourgish]]: , {{t|lb|Promm|f}}, {{t|lb|Praum|f}}
@@ -181,7 +181,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * [[Old English]]: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
 * [[Old High German]]: {{t|goh|pfruma|alt=pfrūma}}
 * [[Papiamentu]]: {{tø|pap|preimu}}
-* Persian:{{t|fa|آلو|tr=âlu|sc=fa-Arab}}
+* Persian:{{t|fa|آلو|tr=âlu|sc=fa-Arab}}, {{t|fa|گوجه|tr=goje|sc=fa-Arab}}
 * Polish: {{t+|pl|śliwka|f}}
 * Portuguese: {{t+|pt|ameixa|f}}
 * Romanian: {{t+|ro|prună|f}}
