--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -166,7 +166,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Irish: {{t-|ga|pluma|m|xs=Irish}}
 * Italian: {{t+|it|prugna|f}}, {{t+|it|susina|f}}
 * Japanese: {{t-|ja|セイヨウスモモ|tr=seiyōsumomo}}, {{t-|ja|プラム|tr=puramu}}
-* {{trreq|Khmer}}
+* [[Khmer]]: {{t|km|ម៉ាក់ប្រាង|tr=makpraang|sc=Khmr}}
 * Korean: {{t+|ko|자두|tr=jadu|sc=Hang}}, {{t-|ko|서양자두|tr=seoyangjadu|sc=Hang}}
 * [[Lao]]: {{t|lo|ໝາກໝັ້ນ|sc=Laoo}}
 * Latin: {{t-|la|prunum|n|alt=prūnum}}
