--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -76,6 +76,7 @@
 {{trans-top|to use the mouth to pull in (liquid etc)}}
 * Arabic: {{t+|ar|مص}}
 * Armenian: {{t-|hy|ծծել|tr=ççel}}
+* [[Aromanian]]: {{tø|rup|sug}}
 * [[Basque]]: {{t|eu|xurgatu}}
 * Bengali: {{t-|bn|চোষা|tr=cosha|sc=Beng|xs=Bengali}}
 * Bulgarian: {{t+|bg|смуча|tr=smuča}}
