--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -5,9 +5,9 @@
 
 ===Etymology===
 {{rfscript|Deva}}
-From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, from {{etyl|fro}} {{term|blond|blond, blont|lang=fro}}, of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||blund|a mixed color between golden and light-brown|lang=frk}}, from {{proto|Germanic|blundaz|mixed, blinding|lang=en}}, from {{proto|Indo-European|bʰlendʰ-|to become turbid, see badly, go blind|lang=en}}. Compare {{etyl|ang|-}} {{term|blondenfeax|''blonden''feax|grey-haired|lang=ang}}, {{ang}} {{term|blandan||to mix|lang=ang}}. More at {{l|en|blend}}.
+From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, from {{etyl|fro}} {{term|blond|blond, blont|lang=fro}}, of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||blund|a mixed color between golden and light-brown|lang=frk}}, from {{proto|Germanic|blundaz|mixed, blinding|lang=en}}, from {{proto|Indo-European|bʰlendʰ-|to become turbid, see badly, go blind|lang=en}}. Compare {{etyl|ang|-}} {{term|blondenfeax|''blonden''feax|grey-haired|lang=ang}}, {{etyl|ang|-}} {{term|blandan||to mix|lang=ang}}. More at {{l|en|blend}}.
 
-Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blond|lang=en}}, from {{proto|Indo-European|bʰl̥ndʰ-||bʰlendʰ-|blond, red-haired|lang=en}}. Cognate with {{sa}} {{term|ब्रध्न||tr=bradhná|ruddy, pale red, yellowish|lang=sa}}.
+Alternate etymology connects {{etyl|frk|-}} *''blund'' to {{proto|Germanic|blundaz|blond|lang=en}}, from {{proto|Indo-European|bʰl̥ndʰ-||bʰlendʰ-|blond, red-haired|lang=en}}. Cognate with {{etyl|sa|-}} {{term|ब्रध्न||tr=bradhná|ruddy, pale red, yellowish|lang=sa}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/blɒnd/}}
@@ -37,14 +37,14 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 * German: {{t|de|Blond|m}}, {{t|de|Blondine|f}}
 * Hebrew: {{t|he|בלונדיני|m|tr=blondyni|sc=Hebr}}, {{t|he|בלונדינית|f|tr=blondynit|sc=Hebr}}
 * Hungarian: {{t+|hu|szőke}}
-* Icelandic: {{t|is|ljóshærður|m}},  {{t|is|ljóshærð|f}}
+* Icelandic: {{t|is|ljóshærður|m}}, {{t|is|ljóshærð|f}}
 * [[Ido]]: [[blonda]]
 * Irish: [[fionn]] (of both males and females), [[fear#Irish|fear]] fionn {{m}}, [[bean#Irish|bean]] fhionn {{f}}
 * Italian: {{t+|it|biondo}}
 {{trans-mid}}
 * Japanese: {{t|ja|ブロンド|tr=burondo|sc=Jpan}}, {{t|ja|金髪|tr=きんぱつ, kinpatsu|sc=Jpan}} {{qualifier|blond hair}}
 * Latin: {{t|la|flavicomus|alt=flāvicomus}}, {{t-|la|fulvus}}
-* [[Macedonian]]: {{t|mk|русокос|m|tr=rúsokos}},  {{t-|mk|плав|m|tr=plav}},  {{t|mk|русокоса|f|tr=rusókosa}},  {{t-|mk|плава|f|tr=pláva}}
+* [[Macedonian]]: {{t|mk|русокос|m|tr=rúsokos}}, {{t-|mk|плав|m|tr=plav}}, {{t|mk|русокоса|f|tr=rusókosa}}, {{t-|mk|плава|f|tr=pláva}}
 * Norwegian: {{t|no|lys(håret)}}, blond, {{t|no|blondine}}
 * Portuguese: [[louro]], [[laurícomo]], [[flavícomo]], [[fulvícomo]], [[blondícomo]], [[claricápilo]], [[alvo]]; "hypocorism" [[lourinho]], [[galeguinho]], [[blondinet]], [[clarinho]]
 * Romanian: [[blondă]]
@@ -65,7 +65,7 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 ====Translations====
 {{trans-top|colour}}
 * Arabic: {{t|ar|أشقر|tr='áshqar|sc=Arab}}
-* Bulgarian: {{t|bg|рус}},  {{t+|bg|светъл}}
+* Bulgarian: {{t|bg|рус}}, {{t+|bg|светъл}}
 * Chinese:
 *: Mandarin: {{t|zh|金髮|sc=Hani}}, {{t|zh|金发|tr=jīnfà|sc=Hani}}
 * Esperanto: {{t-|eo|blonda|xs=Esperanto}}
@@ -75,15 +75,15 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 * German: {{t|de|blond}}, {{t|de|hell}}
 * Japanese: {{t|ja|金髪|tr=きんぱつの, kinpatsu-no|alt=金髪の|sc=Jpan}}
 * Korean: {{t|ko|금발|tr=geumbar-ui|alt=금발의|sc=Kore}}
-* [[Macedonian]]: {{t|mk|руса|f|tr=rúsa}},  {{t-|mk|плава|f|tr=pláva}}
+* [[Macedonian]]: {{t|mk|руса|f|tr=rúsa}}, {{t-|mk|плава|f|tr=pláva}}
 * Russian: {{t+|ru|светлый|tr=svétlyj}}, {{t|ru|русый|tr=rúsyj|sc=Cyrl}}
 * Swedish: {{t-|sv|blond}}
 * [[Volapük]]: {{t|vo|blonik}}, {{qualifier|obsolete}} {{t|vo|blönik}}
 {{trans-bottom}}
 
 {{trans-top|person's complexion}}
-* Arabic: {{t|ar|أشقر|m|tr='áshqar}},  {{t|ar|شقراء|f|tr=shaqraa'}},  {{t|ar|شقر|p|tr=shuqr}}
-* Bulgarian: {{t|bg|рус}},  {{t+|bg|светъл}}
+* Arabic: {{t|ar|أشقر|m|tr='áshqar}}, {{t|ar|شقراء|f|tr=shaqraa'}}, {{t|ar|شقر|p|tr=shuqr}}
+* Bulgarian: {{t|bg|рус}}, {{t+|bg|светъл}}
 * Dutch: {{t|nl|blond}}
 * Esperanto: {{t-|eo|blonda|xs=Esperanto}}
 * Finnish: {{t+|fi|vaalea}}
@@ -91,7 +91,7 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 *: Ancient: {{tø|grc|ξανθός|sc=polytonic}}
 {{trans-mid}}
 * Latin: {{t|la|favus}}
-* [[Macedonian]]: {{t|mk|светол|m|tr=svétol}},  {{t|mk|белолик|m|tr=bélolik}},  {{t|mk|светла|f|tr=svétla}},  {{t|mk|белолика|f|tr=belólika}}
+* [[Macedonian]]: {{t|mk|светол|m|tr=svétol}}, {{t|mk|белолик|m|tr=bélolik}}, {{t|mk|светла|f|tr=svétla}}, {{t|mk|белолика|f|tr=belólika}}
 * Russian: {{t+|ru|белый|tr=bélyj}}
 * Swedish: {{t|sv|ljus}}, {{t|sv|ljushyad}}, blond
 * [[Volapük]]: {{t|vo|blonik}}, {{qualifier|obsolete}} {{t|vo|blönik}}
@@ -159,7 +159,7 @@ From {{etyl|fr|ro}} {{term|blond|lang=fr}}.
 # [[#English|blond]]; of light complexion
 
 ====Synonyms====
-* {{sense|of light complexion}}  [[ljushyllt]]
+* {{sense|of light complexion}} [[ljushyllt]]
 
 [[br:blond]]
 [[cs:blond]]
