--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -53,8 +53,7 @@ From {{etyl|sh|en}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land
 * Russian: {{t+|ru|Югославия|f|tr=Jugoslávija}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Југославија|f|alt=Југо̀сла̄вија|sc=Cyrl|xs=Serbo-Croatian}}, {{t|sh|Југославија|f|tr=Jugoslȁvija|alt=Југосла̏вија|sc=Cyrl}}
-*: Latin: {{t|sh|Jugoslavija|f|alt=Jugoslȁvija}}
-*: Roman: {{t|sh|Jugoslavija|f|alt=Jugòslāvija|xs=Serbo-Croatian}}
+*: Latin: {{t|sh|Jugoslavija|f|alt=Jugòslāvija|xs=Serbo-Croatian}}, {{t|sh|Jugoslavija|f|alt=Jugoslȁvija}}
 * Slovak: {{t|sk|Juhoslávie|f}}
 * Slovene: {{t+|sl|Jugoslavija|f}}
 * Spanish: {{t+|es|Yugoslavia|f}}, {{t|es|Yugoeslavia|f}}
