--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -46,7 +46,7 @@ However, some older forms of the character have a more complex form, and show a 
 # {{defn|lang=ja|sort=日04}}
 
 ====Readings====
-* {{ja-readings|kanon=[[めい]] (mei)|goon=[[みょう]] (myō)|toon=[[みん]] (min)|kun=[[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru)}}
+* {{ja-readings|kanon=[[めい]] (mei)|goon=[[みょう]] (myō)|toon=[[みん]] (min)|kun=[[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru), [[あかす]]　([[明かす, akasu]])}}
 
 ====Compounds====
 {{top3}}
