--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -79,6 +79,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Arabic: {{t|ar|جاء|tr=jaa'a}}, {{t|ar|حضر|tr=HáDara}}, {{t|ar|أتى|tr='ataa}}
 *: Egyptian Arabic: {{tø|arz|جا|tr=gaa|sc=Arab}}
 * Armenian: {{t|hy|գալ|tr=gal|sc=Armn}}
+* [[Aromanian]]: {{tø|rup|yin}}
 * [[Basque]]: [[etorri]]
 * [[Bavarian]]: [[kemma]]
 * Belarusian: {{t|be|прыходзіць|tr=pryxódzic’|sc=Cyrl}}
