--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -170,6 +170,7 @@
 # A wager that results in no loss or gain for the bettor as a result of a tie or even score
 # {{computing}} The addition of a data item to the top of a [[stack]].
 # {{internet|uncountable}} The situation where a [[server]] sends data to a [[client]] without waiting for a request, as in ''server push'', ''push technology''.
+# {{dated}} A [[crowd]] or [[throng]] or people
 
 ====Derived terms====
 * [[give someone the push]]
