t+cy:[[dod]] ([[WT:EDIT|Assisted]]) <come#15562439>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -146,6 +146,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Ukrainian: {{t|uk|приходити|tr=pryxódyty|sc=Cyrl}}
 * Urdu: {{t+|ur|آنا|tr=ānā|xs=Urdu}}
 * Vietnamese: {{t+|vi|lại|xs=Vietnamese}}
+* Welsh: {{t|cy|dod}}
 * [[West Frisian]]: {{t-|fy|komme|xs=West Frisian}}
 * Yiddish: {{t|yi|קומען|tr=komen|sc=Hebr}}
 * [[Zazaki]]: {{tø|zza|amaene}}
