--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -266,6 +266,7 @@
 * Esperanto: {{t-|eo|ludi|xs=Esperanto}}
 * Finnish: {{t+|fi|leikkiä}}
 * French: {{t+|fr|jouer}}, {{t|fr|s'amuser}}
+* [[Friulian]]: {{tø|fur|zuiâ}}
 * [[Galician]]: {{t-|gl|xogar|xs=Galician}}
 * Georgian: {{t|ka|თამაში|tr=t'amaši|sc=Geor}}, {{t|ka|თამაშობა|tr=t'amašoba|sc=Geor}}
 * German: {{t+|de|spielen}}
