t+rup:[[gioc]] ([[WT:EDIT|Assisted]]) <play#15635213>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -256,6 +256,7 @@
 * Aramaic:
 *: [[Syriac]]: {{tø|syc|ܫܥܐ|tr=šʿa|sc=Syrc}}
 * Armenian: {{t-|hy|խաղալ|tr=xaġal}}
+* [[Aromanian]]: {{tø|rup|gioc}}
 * [[Basque]]: {{t|eu|joka}}
 * Belarusian: {{t|be|граць|tr=hrac'|sc=Cyrl}}
 * [[Catalan]]: [[jugar]]
