t+si:[[එනවා]] ([[WT:EDIT|Assisted]]) <come#15690751>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -133,6 +133,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * [[Scots]]: {{tø|sco|cum|xs=Scots}}
 * [[Scottish Gaelic]]: {{t-|gd|thig|xs=Scottish Gaelic}}
 * [[Sicilian]]: {{t|scn|vèniri}}
+* [[Sinhalese]]: {{t|si|එනවා|tr=enavā|sc=Sinh}}
 * Slovak: {{t|sk|prichádzať}}, {{t|sk|prísť}}
 * Slovene: {{t+|sl|priti}}
 * Spanish: {{t+|es|venir}}
