t+sh:[[povraćka]] ([[WT:EDIT|Assisted]]) <vomit#15700919>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -108,6 +108,8 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Portuguese: {{t+|pt|vômito|m}}
 * Russian: {{t+|ru|блевотина|f}}, {{t+|ru|рвота|f}}
 * Serbian: [[bljuvotina]] {{f}}, [[povraćaj]] {{m}}, [[izbljuvak]] {{m}}
+* Serbo-Croatian:
+*: Latin: {{t|sh|povraćka|f}}
 * Spanish: {{t-|es|vómito|m}}
 * [[Telugu]]: [[వాంతి]] (vaamthi)
 * Turkish: {{t+|tr|kusmuk}}, {{t|tr|kusuntu}}
