t+et:[[loendama]] t+et:[[lugema]] ([[WT:EDIT|Assisted]]) <count#15710756>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -139,6 +139,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Danish: {{t-|da|tælle}}
 * Dutch: {{t+|nl|tellen}}
 * Esperanto: [[konti]]
+* Estonian: {{t|et|loendama}}
 * Faroese: {{t+|fo|telja|xs=Faroese}}
 * Finnish: {{t+|fi|laskea}}
 * French: {{t|fr|compter}}
@@ -194,6 +195,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 {{trans-top|to be of significance; to matter}}
 * Bulgarian: {{t|bg|имам значение}}
 * Czech: [[počítat s]]
+* Estonian: {{t|et|lugema}}
 * French: {{t|fr|compter}}
 * German: {{t|de|zählen}}
 * Hungarian: {{t+|hu|számít}}
