t+km:[[និយាយ]] ([[WT:EDIT|Assisted]]) <speak#15724258>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -111,7 +111,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Italian: {{t+|it|parlare}}
 * Japanese: {{t+|ja|話す|tr=はなす, hanasu}}, {{t-|ja|語る|tr=かたる, kataru}}, {{t+|ja|言う|tr=[[いう]], iu}},  {{t+|ja|しゃべる|tr=shaberu}}
 * Kazakh: {{t|kk|айту|tr=aytu|sc=Cyrl}}
-* {{trreq|Khmer}}
+* [[Khmer]]: {{t|km|និយាយ|tr=niʔyiey|sc=Khmr}}
 * Korean: {{t+|ko|말하다|tr=malhada|sc=Hang}}
 * [[Lao]]: {{t|lo|ເວົ້າ|tr=waw|sc=Laoo}}
 * Latin: {{t+|la|dico|alt=dīcō}},  {{t-|la|fabulor|alt=fābulor}}, {{t+|la|loquor}}, {{t|la|for}}, {{t|la|effor}}
