/* Translations */ fix my <United States of America#15768898>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -26,7 +26,7 @@
 * Bosnian: {{t-|bs|Sjedinjene Američke Države|f|p}}, {{t-|bs|Amerika|f}}, {{t-|bs|SAD}}
 * [[Breton]]: {{t|br|Stadoù-Unanet Amerika|f|p|xs=Breton}}, {{t-|br|SUA|xs=Breton}}
 * Bulgarian: {{t|bg|Съединени Американски Щати|m|p|tr=Sǎedinéni Amerikánski Štáti}}, {{t|bg|САЩ|m|p|tr=sašt}}
-* Burmese: {{t|my|အမေရိကန်ပြည်ထောင်စု|sc=Mymr}}
+* Burmese: {{t|my|အမေရိကန်ပြည်ထောင်စုသမတနိုင်ငံ|sc=Mymr|tr=ămeri.kan pyidaungzu. thămăta. naingngan}}
 * [[Catalan]]: {{t|ca|Estats Units d'Amèrica|m|p}}
 * Chinese:
 *: Cantonese: {{tø|yue|美利堅合眾國|tr=mei5lei6gin1hap6zung3gwok3|sc=Hani|xs=Cantonese}}, {{tø|yue|美國|tr=mei5gwok3|sc=Hani|xs=Cantonese}}, {{t-|cmn|美|tr=mei5|sc=Hani|xs=Cantonese}} (''abbreviation'')
@@ -42,7 +42,7 @@
 * Finnish: {{t+|fi|Amerikan yhdysvallat}}, ''short:'' {{t+|fi|Yhdysvallat}}, {{t+|fi|USA}}
 * French: {{t+|fr|États-Unis d'Amérique|m|p}}, (''short form'') {{t+|fr|États-Unis|m|p}}, {{t|fr|É-U}}
 * Georgian: {{t-|ka|ამერიკის შეერთებული შტატები|tr=amerikis šeert'ebuli štatebi|sc=Geor|xs=Georgian}}
-* German: {{t+|de|Vereinigte Staaten von Amerika|m|p}}, {{qualifier|short form}} {{t+|de|Vereinigten Staaten|m|p}}, {{t+|de|USA|m|p}} or {{f|s}}
+* German: {{t+|de|Vereinigte Staaten von Amerika|m|p}}, {{qualifier|short form}} {{t+|de|Vereinigte Staaten|m|p}}, {{t+|de|USA|m|p}} or {{f|s}}
 * Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f|p|tr=Inoménes Politeíes tis Amerikís}} (official), ''short forms:'' {{t-|el|Ηνωμένες Πολιτείες Αμερικής|f|p|tr=Inoménes Politeíes Amerikís}}, {{t+|el|Ηνωμένες Πολιτείες|f|p|tr=Inoménes Politeíes}}, {{t+|el|ΗΠΑ|f|p|tr=IPA}} (USA)
 * [[Gujarati]]: {{t|gu|સંયુકત રાજ્ય અમેરિકા|tr=sanyukat rājya amērikā|sc=Gujr}}
 * Hawaiian: {{tø|haw|'Amelika Huipū'ia}}
