+ iw lb <bridge#15941276>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -390,6 +390,7 @@ From {{etyl|en|fr}} {{term|bridge|lang=en}}.
 [[kk:bridge]]
 [[sw:bridge]]
 [[lo:bridge]]
+[[lb:bridge]]
 [[lt:bridge]]
 [[li:bridge]]
 [[hu:bridge]]
