t+my:[[ထိုး]] t+ga:[[sáigh]] t+cy:[[gwanu]] t+cy:[[trywanu]] ([[WT:EDIT|Assisted]]) <stab#15950306>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -87,6 +87,7 @@
 * Arabic: {{Arab|[[طعن]]}} (ṭáʕana)
 * Armenian: {{t-|hy|խոցել|tr=xoc'el}}
 * Bosnian: {{t-|bs|bosti}}
+* Burmese: {{t|my|ထိုး|tr=hto:|sc=Mymr}}
 * [[Catalan]]: {{t|ca|apunyalar}}, {{t|ca|acoltellar}}
 * Chinese: [[朿]] (cì)
 * Croatian: {{t-|hr|bosti}}
@@ -97,6 +98,7 @@
 * [[Galician]]: {{t+|gl|apuñalar|xs=Galician}}, {{t|gl|acoitelar|xs=Galician}}
 * German: {{t+|de|stechen}}, {{t+|de|erstechen}}
 * Hungarian: {{t+|hu|döf}},  {{t+|hu|szúr}}
+* Irish: {{t|ga|sáigh}}
 * Italian: {{t+|it|pugnalare}}, {{t+|it|accoltellare}}
 {{trans-mid}}
 * {{trreq|ja}}
@@ -112,6 +114,7 @@
 * Spanish: {{t+|es|apuñalar}}, {{t-|es|acuchillar}}
 * {{trreq|sv}}
 * Turkish: {{t|tr|bıçaklamak}}
+* Welsh: {{t|cy|gwanu}}, {{t|cy|trywanu}}
 {{trans-bottom}}
 
 {{trans-top|To aim a blow with a weapon or a finger (at someone or something)}}
