t+mn:[[Израйль]] ([[WT:EDIT|Assisted]]) <Israel#16070965>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -91,6 +91,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, which
 * [[Mansoanka]]: {{tø|msw|Israeli}}
 * [[Marathi]]: [[इस्रायल]] (isrāyal), {{t|mr|इस्रायल|tr=isrāyal|sc=Deva}}
 * [[Meru]]: {{tø|mer|Israel}}
+* Mongolian: {{t|mn|Израйль|tr=Izrajl'|sc=Cyrl}}
 * Navajo: {{tø|nv|Ízrel bikéyah}}
 * Norwegian: {{t+|no|Israel}}
 * [[Old Church Slavonic]]: [[Їздраил҄ь]]
