--- a/en/场/场.12988.wikitext
+++ b/en/场/场.12988.wikitext
@@ -31,8 +31,13 @@
 
 ===Hanzi===
 {{cmn-hanzi|tra=場|pin=[[chǎng]] ([[chang3]])|wg=ch'ang<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=土03}}
+#[[threshing floor]]
+#[[classifier]] for events and happenings: spell, episode, bout
+#large place used for a specific purpose
+#[[stage]]
+#[[scene]] (of a play)
+#[[classifier]] for sporting or recreational activities
+#[[classifier]] for number of exams
 
 [[Category:Mandarin entries with audio links]]
 
