Etymology: "<" to "from" using [[Project:AWB|AWB]] <倭#16151825>

--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -31,14 +31,14 @@
 # {{defn|lang=ja|sort=人08}}
 
 ====Readings====
-* {{ja-readings|on=[[い]] (i) < [[ゐ]] (wi), [[わ]] (wa)|kun=[[したがう]] (shitagau), [[やまと]] (yamato)}}
+* {{ja-readings|on=[[い]] (i), from [[ゐ]] (wi), [[わ]] (wa)|kun=[[したがう]] (shitagau), [[やまと]] (yamato)}}
 
 ----
 
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=[[위]], [[왜]] (< Middle Korean 와)|rv=wi, wae (< wa)|mr=wi, wae (< wa)|eumhun=왜나라|ehrv=wae nara|ehmr=wae nara}}
+{{ko-hanja|hangeul=[[위]], [[왜]] (from Middle Korean 와)|rv=wi, wae (from wa)|mr=wi, wae (from wa)|eumhun=왜나라|ehrv=wae nara|ehmr=wae nara}}
 
 # ([[유순하다|유순할]] 왜, ''yusunhal-''): [[docile]], [[obedient]]
 # ([[나라]] [[이름]] 왜, ''nara-ireum-''): [[ancient]] [[Japan]], [[Yamato]] 
