t+ar:[[قرميد]] t-balance ([[WT:EDIT|Assisted]]) <brick#16160397>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -56,7 +56,7 @@ Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic sour
 {{trans-top|hardened block used for building}}
 * [[Afrikaans]]: {{t-|af|baksteen|xs=Afrikaans}}
 * [[Akkadian]]: {{tø|akk|𒋞|tr=libittu, SIG<sub>4</sub>|sc=Xsux}}
-* Arabic: {{t|ar|طوبة|f|tr=Tuuba}},  {{t|ar|لبنة|f|tr=lábina}}
+* Arabic: {{t|ar|طوبة|f|tr=Tuuba}},  {{t|ar|لبنة|f|tr=lábina}}, {{t|ar|قرميد|m|tr=qarmīn|sc=Arab}}
 * Armenian: {{t-|hy|աղյուս|tr=aġyus}}
 * [[Basque]]: [[adreilu]]
 * Belarusian: {{t|be|цэгла|f|tr=céhla|sc=Cyrl}}
