/* Translations */ +de <secretary#16163789>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -82,6 +82,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}}, from
 * Esperanto: {{t-|eo|sekretario|xs=Esperanto}}
 * Finnish: {{t+|fi|ministeri}}
 * French: {{t+|fr|secrétaire}}
+* German: {{t+|de|Minister|m}}
 * Greek: {{t+|el|υπουργός|m|f|tr=ipurgós}}
 * Hungarian: {{t+|hu|miniszter}}, {{t-|hu|államtitkár}}
 * [[Interlingua]]: [[secretaria]] {{f}}
