--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -16,6 +16,7 @@ Alternate etymology connects {{frk}} *''blund'' to {{proto|Germanic|blundaz|blon
 
 # A person (usually a woman) of [[fair]] skin and fair hair.
 # The hair color that appears [[yellow]], [[golden]], or lighter.
+# Unbleached Silk lace (from the Shorter Oxford Dictionary)
 # A light [[yellow]]ish [[brown]] color.
 #: {{color panel|F8E8A7}}
 
