t+no:[[porting]] ([[WT:EDIT|Assisted]]) <port#16171979>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -257,6 +257,7 @@ From {{etyl|fro}} {{term|porter|lang=fr}}, from {{etyl|la}} {{term|portare||carr
 =====Translations=====
 {{trans-top|computing: program adapted to work on a different platform; act of adapting}}
 * Finnish: [[sovitus]], [[sovittaminen]], [[porttaaminen]] {{qualifier|informal}}, [[porttaus]] {{qualifier|informal}}
+* Norwegian: {{t|no|porting|m}}
 * Swahili: {{t|sw|mabandari|xs=Swahili}}
 {{trans-mid}}
 * Swedish: {{t-|sv|portering|c}}, {{t|sv|portning|c}}
