t+tr:[[şişlemek]] t+de:[[niederstechen]] t+sv:[[att sticka]] ([[WT:EDIT|Assisted]]) <stab#16218166>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -96,7 +96,7 @@
 * Finnish: {{t+|fi|puukottaa}}
 * French: {{t+|fr|poignarder}}, {{t|fr|frapper d'un coup de couteau}}
 * [[Galician]]: {{t+|gl|apuñalar|xs=Galician}}, {{t|gl|acoitelar|xs=Galician}}
-* German: {{t+|de|stechen}}, {{t+|de|erstechen}}
+* German: {{t+|de|stechen}}, {{t+|de|erstechen}}, {{t|de|niederstechen}}
 * Hungarian: {{t+|hu|döf}},  {{t+|hu|szúr}}
 * Irish: {{t|ga|sáigh}}
 * Italian: {{t+|it|pugnalare}}, {{t+|it|accoltellare}}
@@ -112,8 +112,8 @@
 * [[Santali]]: {{tø|sat|ᱨᱳᱜ|tr=rok'|sc=Olck}}
 * Serbian: {{t-|sr|bosti}}
 * Spanish: {{t+|es|apuñalar}}, {{t-|es|acuchillar}}
-* {{trreq|sv}}
-* Turkish: {{t|tr|bıçaklamak}}
+* Swedish: {{t|sv|att sticka}}
+* Turkish: {{t|tr|bıçaklamak}}, {{t|tr|şişlemek}}
 * Welsh: {{t|cy|gwanu}}, {{t|cy|trywanu}}
 {{trans-bottom}}
 
