/* Translations */ fix fr <cut#16220096>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -162,7 +162,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Bulgarian: {{t|bg|рязане|n}}
 * Danish: {{t-|da|hug|n}}
 * Finnish: [[leikkaus]], [[viilto]], [[sivallus]]
-* French: {{t|fr|coupure|f}}
+* French: {{t|fr|coupe|f}}, {{t|fr|entaille|f}}
 * German: {{t+|de|schneiden|m}}
 * Hebrew: {{t|he|חיתוך|m|tr=khitúkh}}
 * Icelandic: {{t+|is|skurður|m}}
@@ -180,6 +180,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 {{trans-top|result of cutting}}
 * Danish: {{t-|da|snit|n}}
 * Finnish: [[leikkaus]], [[viilto]], [[sivallus]], [[haava]]
+* French: {{t|fr|coupe|f}}
 * German: {{t+|de|Schnitt|m}}
 * Icelandic: {{t|is|afskurður|m}}
 {{trans-mid}}
@@ -201,6 +202,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Czech: {{t|cs|snímání}}
 * Danish: {{t|da|aftagning|c}}
 * Finnish: {{t-|fi|nosto}}
+* French: {{t|fr|coupe|f}}
 * German: {{t+|de|abheben}}, {{t+|de|schneiden}}
 {{trans-mid}}
 * Italian: {{t+|it|alzata|f}}
@@ -214,6 +216,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Danish: {{t-|da|snit|n}}, {{t-|da|mode|c}}
 * Dutch: {{t-|nl|snit}}
 * Finnish: {{t-|fi|leikkaus}}
+* French: {{t|fr|coupe|f}}
 {{trans-mid}}
 * German: {{t+|de|Schnitt|m}}
 * Italian: {{t+|it|taglia|f}}
@@ -234,6 +237,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * Danish: {{t|da|udskæring|c}}, {{t|da|stykke|n}}
 * Dutch: {{t+|nl|stuk|n}}
 * Finnish: {{t+|fi|pala}}
+* French: {{t|fr|coupe|f}}
 {{trans-mid}}
 * Hebrew: {{t|he|חתיכה|f|tr=khatikhá}}
 * Italian: {{t+|it|taglio|m}}, {{t+|it|pezzo|m}}
