t+vi:[[kéo]] t+vi:[[giật]] ([[WT:EDIT|Assisted]]) <pull#16220789>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -115,6 +115,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Swedish: {{t+|sv|dra}}, {{t+|sv|draga}}
 * [[Telugu]]: [[లాగు]] (laagu)
 * Turkish: {{t+|tr|çekmek}}
+* Vietnamese: {{t|vi|kéo}}, {{t|vi|giật}}
 * [[West Frisian]]: {{t+|fy|trekke|xs=West Frisian}},  {{t-|fy|lûke|xs=West Frisian}}
 {{trans-bottom}}
 
